some small changes

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -72,15 +72,17 @@
 
         <div class="row text-center mt-5">
             <div class="col-md-4 orange-border">
-                <h4>Heghes Bogdan</h4>
+                <h4><br/>Heghes Bogdan</h4>
                 <p class="text-muted">User Interface</p>
             </div>
             <div class="col-md-4 orange-border">
                 <h4>Popa Ionut</h4>
+                <h5>and</h5>
+                <h6>Ciuverca Ionut</h6>
                 <p class="text-muted">Back-end</p>
             </div>
             <div class="col-md-4 orange-border">
-                <h4>Ciuverca Ionut</h4>
+                <h4><br/>Ciuverca Ionut</h4>
                 <p class="text-muted">Unit Tests</p>
             </div>
         </div>
